Perkin-UAT/force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <label>Competitor (New)</label>
    <nameField>
        <displayFormat>COMP-{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>