Perkin-UAT/force-app/main/default/objects/Competitor__c/fields/Key_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Key_Strengths__c</fullName>
    <label>Key Strengths</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>