Perkin-UAT/force-app/main/default/objects/Competitor__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>ALH</fullName>
            </value>
            <value>
                <fullName>ANP</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>DIS</fullName>
            </value>
            <value>
                <fullName>ESS</fullName>
            </value>
            <value>
                <fullName>FGP</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>HMG</fullName>
            </value>
            <value>
                <fullName>HTS</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>LCA</fullName>
            </value>
            <value>
                <fullName>LVI</fullName>
            </value>
            <value>
                <fullName>MAS</fullName>
            </value>
            <value>
                <fullName>MDX</fullName>
            </value>
            <value>
                <fullName>MLD</fullName>
            </value>
            <value>
                <fullName>NEO</fullName>
            </value>
            <value>
                <fullName>NTD</fullName>
            </value>
            <value>
                <fullName>PRE</fullName>
            </value>
            <value>
                <fullName>RRD</fullName>
            </value>
            <value>
                <fullName>RRS</fullName>
            </value>
            <value>
                <fullName>SPS</fullName>
            </value>
            <value>
                <fullName>TEA</fullName>
            </value>
            <value>
                <fullName>UVS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>