Perkin-UAT/force-app/main/default/objects/Competitor__c/fields/Successful_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Successful_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Successful Vendor</label>
    <type>Checkbox</type>
</CustomField>