Perkin-UAT/force-app/main/default/objects/Competitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Competitor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Key_Strengths__c</columns>
    <columns>Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>